# Kokoros

./: .gitignore  README.md  extract_libs.sh  flake.nix  test_unicode  test_unicode.rs
.github/workflows/: build-koko.yml  docker-ghcr.yml
checkpoints/: .gitignore
koko/: Cargo.toml
koko/src/: main.rs
kokoros/: Cargo.toml  build.rs
kokoros-openai/src/: lib.rs
kokoros/src/onn/: ort_base.rs  ort_koko.rs
kokoros/src/tts/: koko.rs  phonemizer.rs
kokoros/src/utils/: opus.rs
src/serve/: openai.rs
