[package]
name = "kokoros"
version = "0.1.0"
edition = "2024"

[dependencies]
espeak-rs = "0.1.9"
hound = "3.5.1"
indicatif = "0.17.11"
ndarray = "0.16.1"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.13.1", default-features = false, features = ["charset", "http2", "system-proxy"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["fs", "io-util"] }
ndarray-npy = "0.9.1"
mp3lame-encoder = "0.2.1"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
opus = "0.3"
ogg = "0.9"

# Base ONNX Runtime configuration
ort = { version = "2.0.0-rc.11", default-features = false, features = ["copy-dylibs", "download-binaries", "ndarray", "std", "tracing"] }

[features]
default = ["cpu", "native-tls"]
cpu = []
cuda = ["ort/cuda"]
native-tls = ["ort/tls-native", "reqwest/native-tls"]
rustls = ["ort/tls-rustls", "reqwest/rustls"]
